Numerical Meth now only section, some progress

--- a/Thesis/Appendices/Code.tex
+++ b/Thesis/Appendices/Code.tex
@@ -1,6 +1,6 @@
 \chapter{Code}\label{chapter:Code}
-As covered Chapter~\ref{chapter:numerical_method}, the finite volume method solver FiPy \cite{guyer_fipy:_2009} is used to solve the system of equations.
-This section will obviously not cover the code comprehensively, but it should give an idea on how the equations were declared.
+As covered Section~\ref{sec:numerical_method}, the finite volume method solver FiPy \cite{guyer_fipy:_2009} is used to solve the system of equations.
+This section will obviously not cover the code comprehensively, but it should give an idea on how the equations were declared, as this is not trivial.
 
 In the main solving program, the declarations of the equations and their coupling is the following:
 \inputminted[firstline=22, lastline=43, tabsize=4, breaklines=true, fontsize=\footnotesize, frame=single, linenos=true]{python}{../FiPy_Model/solving_flux.py}
