--- a/Thesis/Conclusion/Conclusion.tex
+++ b/Thesis/Conclusion/Conclusion.tex
@@ -1,5 +1,5 @@
-\chapter{Conclusion}\label{chapter:conclusion}
-
+\chapter{Conclusion} \label{chapter:conclusion}
+\section{Discussion} \label{sec:discussion}
 \begin{itemize}
 	\item \textbf{Which electric field-generating mechanisms are dominant in concrete experimental tokamak conditions?}
 \end{itemize}
@@ -46,4 +46,6 @@ As of now, there is no indication of one form having an advantage over the other
 
 In addition, bifurcation analysis is required to prove that the sum of the nonambipolar fluxes provides the same bifurcating behavior the original model has.
 Any newly-included mechanisms, such as Reynolds stress, should be subject to the same rigor.
+
+\section{Outlook} \label{sec:outlook}
 
