--- a/Thesis/Numerical_Method/Numerical_Method.tex
+++ b/Thesis/Numerical_Method/Numerical_Method.tex
@@ -1,4 +1,4 @@
-\chapter{Numerical Method}\label{chapter:numerical_method}
+\chapter{Numerical Method}\label{sec:numerical_method}
 \todo{\color{red}Whole chapter? Or just section?}
 The finite volume method (FVM) is a numerical method of evaluating and representing partial differential equations.
 It is sometimes, confusingly, referred to as the finite difference \emph{scheme} or the cell-centered difference scheme, the former which clashes in name with the finite difference method.
