--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -140,9 +140,9 @@
 
 \cleardoublepage
 
-\input{Numerical_Method/Numerical_Method.tex}
-
-\cleardoublepage
+%\input{Numerical_Method/Numerical_Method.tex}
+%
+%\cleardoublepage
 
 \input{Results/Results.tex}
 
