--- a/Thesis/Results/Results.tex
+++ b/Thesis/Results/Results.tex
@@ -1,7 +1,7 @@
 \chapter{Results}\label{chapter:results}
 This chapter is broken into two sections.
 The first covers verification to any of the changes made to the numerical parameters of the original model of the $Z$ equation (Eq.~\ref{eq:original_Z_equation}).
-The second section shows the results of the flux version, Eq.~\ref{eq:reduced_normalized_Z_equation}.
+The second section shows the results of the flux version, Eq.~\ref{eq:reduced_normalized_Z_equation}, including the problems that arose.
 
 \section{Original Model} \label{sec:original_results}
 Also as proven in \cite{paquay_studying_2012}, the Flow-Shear model of the diffusivity Eq.~\ref{eq:flow_shear_diffusivity} generates the bifurcating behavior as expected.
@@ -103,8 +103,14 @@ The lowest line is the one at the barrier, showing three zeros, with the middle 
 The left zero of about $-3$ provokes the edge-side $Z$ value in the state.
 
 \section{Flux Model} \label{sec:flux_results}
+The flux model was simulated using SI units, with the routine exception of temperature in electron-volts.
+Scans over input power ($\Gamma_c$ and $q_c$) were done with both the full model and with excluding one nonambipolar flux at a time.
+However, one currently-unexplained phenomenon commanded the behavior.
 
-
+First, a full run of the model was done, with the relevant variables shown in Fig.~\ref{fig:flux_state_full}.
+The parameters of the diffusivity, the time step size, and the core particle flux are indicated in the title.
+This time step was chosen to show the implying transport barrier characteristic of H--mode.
+Table~\ref{table:flux_values} shows particular components of the fluxes at the same time step, when applicable, with the totals on the rightmost column.
 %{{{ Two Figures for showing the full state, pre-oscillations
 \TwoFigOneCap{\includegraphics[width=\linewidth]{../Graphics/Model_Graphs/state_G1e20_full_t200.png}}
 	{\includegraphics[width=\linewidth]{../Graphics/Model_Graphs/flux_G1e20_full_t200.png}}
@@ -116,7 +122,7 @@ The left zero of about $-3$ provokes the edge-side $Z$ value in the state.
 
 \begin{table}[!htb] % Shows flux data for a time slice at two locations
 	\centering
-	\begin{tabular}{r|cccc}
+	\small\begin{tabular}{c|r|ccccc}
 	\begin{sagesilent} # At x ~ 0.002, t = 200
 		reset()
 		load("../Sage_Model/parameters.sage")
@@ -137,11 +143,11 @@ The left zero of about $-3$ provokes the edge-side $Z$ value in the state.
 		g_T_cx = g_n_cx * alpha_cx
 		g_Z_cx = g_n_cx / rho_pi
 	\end{sagesilent}
-		$x = \sage{(x*1000).n(digits=4)}$ mm & $\dfrac{n^\prime}{n}$ & $\dfrac{T^\prime}{T}$ & $Z$ & Total \\
-		$\dagger \, \Gamma_i^{\pi\parallel}$ & $\sage{(density * D_bulk * sqrt(pi)*exp(-Z^2)).n(digits=3)}$ & --- & $\sage{((density * D_bulk / rho_pi) * sqrt(pi)*exp(-Z^2)).n(digits=3)}$ & $\sage{Gamma_bulk.n(digits=3)}$ \\
-		$\Gamma_e^\text{an}$ & $\sage{(density * D_an).n(digits=3)}$ & $\sage{(density * D_an * alpha_an).n(digits=3)}$ & $\sage{(density * D_an / rho_pi).n(digits=3)}$ & $\sage{Gamma_an.n(digits=3)}$ \\
-		$\Gamma_i^\text{cx}$ & $\sage{g_n_cx.n(digits=3)}$ & $\sage{g_T_cx.n(digits=3)}$ & $\sage{g_Z_cx.n(digits=3)}$ & $\sage{Gamma_cx.n(digits=3)}$ \\
-		$\Gamma_i^\text{ol}$ & --- & --- & --- & $\sage{Gamma_ol.n(digits=3)}$ \\ \hline
+		$x$ & & $\dfrac{n^\prime}{n}$ & $\dfrac{T^\prime}{T}$ & $Z$ & Total & $J_j^\text{k}$ \\ \hline
+		\multirow{4}{*}{$\sage{(x*100).n(digits=3)}$ cm} & $\dagger \, \Gamma_i^{\pi\parallel}$ & $\sage{(density * D_bulk * sqrt(pi)*exp(-Z^2)).n(digits=3)}$ & --- & $\sage{((density * D_bulk / rho_pi) * sqrt(pi)*exp(-Z^2)).n(digits=3)}$ & $\sage{Gamma_bulk.n(digits=3)}$ & $\sage{(constants.e * Gamma_bulk).n(digits=3)}$ \\
+		& $\Gamma_e^\text{an}$ & $\sage{(density * D_an).n(digits=3)}$ & $\sage{(density * D_an * alpha_an).n(digits=3)}$ & $\sage{(density * D_an / rho_pi).n(digits=3)}$ & $\sage{Gamma_an.n(digits=3)}$ & $\sage{(constants.e * Gamma_an).n(digits=3)}$ \\
+		& $\Gamma_i^\text{cx}$ & $\sage{g_n_cx.n(digits=3)}$ & $\sage{g_T_cx.n(digits=3)}$ & $\sage{g_Z_cx.n(digits=3)}$ & $\sage{Gamma_cx.n(digits=3)}$ & $\sage{(constants.e * Gamma_cx).n(digits=3)}$ \\
+		& $\Gamma_i^\text{ol}$ & --- & --- & --- & $\sage{Gamma_ol.n(digits=3)}$ & $\sage{N(constants.e * Gamma_ol).n(digits=3)}$ \\ \hline
 
 	\begin{sagesilent} # x ~ 0.030125, t = 200
 		x, density, temperature, Z, Diffusivity, D_an, Gamma_an, n_0, cx_rate, Gamma_cx, D_bulk, Gamma_bulk, Gamma_ol = 0.030125, 1.08615114035334e+18, 221.843028685801, 1.77821178953312, 4.94743894562273, 0.00108811581270749, 6.12848344919829e+17, 1943024953.06425, 2.81018035060206e-13, -4232723648741.13, -0.0310869925862421, -1.37764340545142e+18, -1.15809327369854e-59
@@ -160,36 +166,45 @@ The left zero of about $-3$ provokes the edge-side $Z$ value in the state.
 		g_Z_cx = g_n_cx / rho_pi
 	\end{sagesilent}
 
-		$x = \sage{(x*1000).n(digits=4)}$ mm & & & & \\
-		$\dagger \, \Gamma_i^{\pi\parallel}$ & $\sage{(density * D_bulk * sqrt(pi)*exp(-Z^2)).n(digits=3)}$ & --- & $\sage{((density * D_bulk / rho_pi) * sqrt(pi)*exp(-Z^2)).n(digits=3)}$ & $\sage{Gamma_bulk.n(digits=3)}$ \\
-		$\Gamma_e^\text{an}$ & $\sage{(density * D_an).n(digits=3)}$ & $\sage{(density * D_an * alpha_an).n(digits=3)}$ & $\sage{(density * D_an / rho_pi).n(digits=3)}$ & $\sage{Gamma_an.n(digits=3)}$ \\
-		$\Gamma_i^\text{cx}$ & $\sage{g_n_cx.n(digits=3)}$ & $\sage{g_T_cx.n(digits=3)}$ & $\sage{g_Z_cx.n(digits=3)}$ & $\sage{Gamma_cx.n(digits=3)}$ \\
-		$\Gamma_i^\text{ol}$ & --- & --- & --- & $\sage{Gamma_ol.n(digits=3)}$
-	\end{tabular}
+		\multirow{4}{*}{$\sage{(x*100).n(digits=3)}$ cm} & $\dagger \, \Gamma_i^{\pi\parallel}$ & $\sage{(density * D_bulk * sqrt(pi)*exp(-Z^2)).n(digits=3)}$ & --- & $\sage{((density * D_bulk / rho_pi) * sqrt(pi)*exp(-Z^2)).n(digits=3)}$ & $\sage{Gamma_bulk.n(digits=3)}$ & $\sage{(constants.e * Gamma_bulk).n(digits=3)}$ \\
+		 & $\Gamma_e^\text{an}$ & $\sage{(density * D_an).n(digits=3)}$ & $\sage{(density * D_an * alpha_an).n(digits=3)}$ & $\sage{(density * D_an / rho_pi).n(digits=3)}$ & $\sage{Gamma_an.n(digits=3)}$ & $\sage{(constants.e * Gamma_an).n(digits=3)}$ \\
+		 & $\Gamma_i^\text{cx}$ & $\sage{g_n_cx.n(digits=3)}$ & $\sage{g_T_cx.n(digits=3)}$ & $\sage{g_Z_cx.n(digits=3)}$ & $\sage{Gamma_cx.n(digits=3)}$ & $\sage{(constants.e * Gamma_cx).n(digits=3)}$ \\
+		 & $\Gamma_i^\text{ol}$ & --- & --- & --- & $\sage{Gamma_ol.n(digits=3)}$ & $\sage{(constants.e * Gamma_ol).n(digits=3)}$
+	\end{tabular}\normalsize
 	\caption{This table shows the values of the nonambipolar fluxes at two locations in the domain.
 	The upper half comes from a region of the transition, while the lower half is close to the core of the domain, indisputably in L--mode.
 	The appropriate gradient coefficients are shown in the columns, \emph{i.e.} $g_l^\text{k}$.
 	Note that, since bulk viscosity $\Gamma_i^{\pi\parallel}$ has a nonlinear term in the plasma dispersion function, its gradient coefficients are not entirely comparable.
-	Nevertheless, they do give an indication of the relative dominance.}
+	Nevertheless, they do give an indication of the relative dominance.
+	The time step used is the same of that in Fig.~\ref{fig:flux_state_full}.}
 	\label{table:flux_values}
 \end{table}
+One note from this data is that the neoclassical bulk viscosity $\Gamma_i^{\pi\parallel}$ results in the largest flux.
+This is found consistently throughout all combinations of fluxes and input power.
 
 \begin{figure}[htb] % FLUXES STEADY-STATE, SAVED IMAGE, because it takes to long to run
 	\centering
 	\includegraphics[width=0.9\textwidth]{../Graphics/Model_Graphs/Flux_vs_Z_t200_core_simple.png}
-	\includegraphics[width=0.9\textwidth]{../Graphics/Model_Graphs/Flux_vs_Z_t200_core_complex.png}
-	\caption{These plots are akin to Fig.~\ref{fig:original_stationary_vs_Z} to the flux model; each nonambipolar flux is plotted against $Z$ at the indicated location and time.
-	One minor aspect with \emph{potentially} large ramifications differ the two plots.
-The top plot implements the bulk viscosity $\Gamma_e^{\pi\parallel}$ with the simple Gaussian form from Eq.~\ref{eq:plasma_disp_reduction}, and the bottom plot including the full version of the plasma dispersion function.}
+	%\includegraphics[width=0.9\textwidth]{../Graphics/Model_Graphs/Flux_vs_Z_t200_core_complex.png}
+	\caption{This plots is akin to Fig.~\ref{fig:original_stationary_vs_Z} for the flux model; each nonambipolar flux is plotted against $Z$ at the indicated location and time.
+	It clearly shows three steady-state points, just as the original model, and shows the dominance of the bulk viscosity.}
 \end{figure}
 For absolute values above some threshold, the bulk viscosity defined with the full plasma dispersion function becomes erratic and unphysical.
 It seems to be similar to the function $\sin(1/x)$ as $x$ approaches zero.
 
-%{{{ Two Figures for displaying the oscillations
+%{{{ Two Figures for displaying the oscillations with large time step
 \TwoFigOneCap{\includegraphics[width=\textwidth]{../Graphics/Model_Graphs/state_G1e20_full_t400.png}}
 	{\includegraphics[width=\textwidth]{../Graphics/Model_Graphs/state_G1e20_full_t401.png}}
 	{These two plots are one time step from another, with the same parameters as those found in Fig.~\ref{fig:flux_state_full}.
 	The defining feature of the mathematics is the rapid oscillations that occur.}
 	{fig:show_oscillations}
 %}}}
+%{{{ Two Figures for displaying the oscillations with short time step
+\TwoFigOneCap{\includegraphics[width=\textwidth]{../Graphics/Model_Graphs/state_G1e20_extended_t1059.png}}
+	{\includegraphics[width=\textwidth]{../Graphics/Model_Graphs/state_G1e20_extended_t1060.png}}
+	{The same simulation was done as in Fig.~\ref{fig:show_oscillations}, with a time step one-tenth the size.}
+	{fig:show_oscillations_extended}
+%}}}
+
+On the note of bifurcation: due to the linear forms of the anomalous electron loss $\Gamma_e^\text{an}$ and charge exchange friction $\Gamma_i^\text{cx}$, bifurcating behavior cannot arise due to them.
 
