--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -22,7 +22,7 @@
 \author{\me}
 
 \usepackage{fullpage, indentfirst, graphicx, amsmath, float}
-\usepackage{cancel}
+\usepackage{cancel, multirow}
 \linespread{1.1}
 \usepackage[dvipsnames]{xcolor}
 \usepackage[labelfont=bf]{caption}
