--- a/Thesis/Conclusion/Conclusion.tex
+++ b/Thesis/Conclusion/Conclusion.tex
@@ -6,6 +6,7 @@
 
 The ion bulk viscosity $\Gamma_i^{\pi\perp}$ and the anomalous electron loss $\Gamma_e^\text{an}$ consistently has the largest effect on the field, with the former resulting in strong oscillations.
 Ion orbit loss $\Gamma_i^\text{ol}$ becomes highly suppressed once there is a nonzero value of the electric field at the edge, and thus is not dominant in H--mode.
+In L--mode, $\Gamma_i^\text{ol}$
 The charge exchange friction $\Gamma_i^\text{cx}$ is highly dependent on the neutrals density, and therefore processes resulting in a higher neutrals density dictate its dominance.
 In this investigation, it was found to not supersede the two first mentioned.
 
