--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -16,6 +16,7 @@
 \newcommand{\firstCommitteeMember}{dr. H.J. de Blank}
 \newcommand{\secondCommitteeMember}{Second Committee Member}
 \newcommand{\thirdCommitteeMember}{Third Committee Member}
+\newcommand{\fourthCommitteeMember}{Fourth Committee Member}
 %}}}
 
 \title{\doctitle}
