--- a/Thesis/titlepage.tex
+++ b/Thesis/titlepage.tex
@@ -20,24 +20,29 @@ Science and Technology of Nuclear Fusion
 % Begins a textbox at 62 mm from the left of the edge of the paper and 89 mm from the top
 % The width of the textbox is 95 mm (167 - 72 mm)
 % The height of the box cannot be defined, so it is your task to keep the text not too long
-\begin{textblock}{115}(50,89)
-    \vspace*{1mm}
-    \huge
-    \textbf{\doctitle \\}
-    \Large
-    \vspace*{5mm}
-    \textit{\docsubtitle}\\
-    \vspace*{10mm}
-    \Large
-    \me\\
+\begin{textblock}{145}(35,89)
+	\vspace*{1mm}
+	\huge
+	\textbf{\doctitle \\}
+	\Large
+	\vspace*{8mm}
+	\textit{\docsubtitle}\\
+	\vspace*{15mm}
+	\Large
+	\me\\
 \end{textblock}
 
 \large
-Supervisors:\\
+Supervisor:\\
 \begin{tabular}{rl}
-    \firstCommitteeMember\\
-    \secondCommitteeMember\\
-    \thirdCommitteeMember\\
+	\firstCommitteeMember\\
+\end{tabular}
+\\ \vspace*{5mm}
+Committee Members:\\
+\begin{tabular}{rl}
+	\secondCommitteeMember\\
+	\thirdCommitteeMember\\
+	\fourthCommitteeMember\\
 \end{tabular}
 
 %\vfill
